feat: add inactivity detection context and hooks for product management
- Implemented InactivityContext to manage user inactivity state with a customizable timeout.
- Added useInactivity hook for easy access to inactivity state and reset functionality.
- Created useProducts hook to fetch and manage product data from the global window object.
- Integrated event listeners for user activity to reset inactivity timer.

--- a/apps/kiosk/src/index.css
+++ b/apps/kiosk/src/index.css
@@ -1,16 +1,90 @@
 @import "tailwindcss";
 
-:root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	font-weight: 400;
-
-	color-scheme: light;
-	color: #000000;
-	background-color:  #ffffff;
-
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/Lato-ThinItalic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+  font-display: swap;
 }
 
+:root {
+  font-family: 'Lato', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+
+  color-scheme: light;
+  color: #000000;
+  background-color: #ffffff;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  --color-persian-red-50: #fdf3f3;
+  --color-persian-red-100: #fce5e4;
+  --color-persian-red-200: #fad0ce;
+  --color-persian-red-300: #f5afac;
+  --color-persian-red-400: #ee807b;
+  --color-persian-red-500: #e25851;
+  --color-persian-red-600: #c73730;
+  --color-persian-red-700: #ad2e28;
+  --color-persian-red-800: #8f2a25;
+  --color-persian-red-900: #772925;
+  --color-persian-red-950: #40110f;
+}
