feat: Scroll & Order Managment

--- a/apps/kiosk/src/index.css
+++ b/apps/kiosk/src/index.css
@@ -101,3 +101,13 @@
 * {
   touch-action: pan-y;
 }
+@layer utilities {
+  .scrollbar-none {
+    scrollbar-width: none;
+  }
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+
